# cortana

./: .env.example  .gitignore  README.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
config/: cortana.yaml
config/searxng/: settings.yml
cortana/: __init__.py  cli.py  config.py
cortana/core/: file_server.py  orchestrator.py  safety.py  secrets.py  terminal_server.py  ws_server.py
cortana/inference/: client.py
cortana/memory/: store.py
cortana/plugins/: _osa.py  base.py  registry.py
cortana/plugins/builtin/: briefing.py  calendar.py  clipboard.py  code_assistant.py  email.py  file_manager.py  memory.py  news.py  notes.py  perception.py  reminders.py  scheduler.py  self_editor.py  system_control.py  weather.py  web_fetch.py  web_search.py
cortana/voice/: pipeline.py
electron/: main.js  package-lock.json  package.json  preload.js  splash.html
electron/assets/: icon.icns
scripts/: build-app.sh  configure-secrets.mjs  run.sh  setup-local-bridge.sh  setup.sh  supervisor.sh  train_wake_word.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/auth/login/: route.ts
src/app/api/auth/logout/: route.ts
src/app/api/bridge-config/: route.ts
src/app/sign-in/: page.tsx
src/components/: assistant-console.tsx  sign-in-form.tsx
src/components/ai-elements/: code-block.tsx
src/lib/: auth.ts
tests/: test_dispatch.py  test_memory.py  test_orchestrator.py
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  config.ts  index.css  markdown.ts
ui/src/components/: BrainOrb.css  BrainOrb.tsx  ChatPanel.tsx  FilesPanel.tsx  MemoryPanel.tsx  NotesPanel.tsx  SearchPanel.tsx  StatusBar.tsx  SysStats.tsx  SystemPanel.tsx  TerminalPanel.tsx
