[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortana"
version = "0.1.0"
description = "Local, privacy-first AI personal assistant for macOS"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",           # llama.cpp OpenAI-compat client
    "chromadb>=0.5",         # episodic memory
    "pyzmq>=26",             # message bus
    "pydantic>=2.0",         # config / data models
    "httpx>=0.27",           # async HTTP (web fetch plugin)
    "beautifulsoup4>=4.12",  # HTML parsing
    "pyaudio>=0.2",          # mic capture
    "pyperclip>=1.8",        # clipboard plugin
    "pyyaml>=6.0",           # plugin manifests
    "rich>=13",              # terminal output
    "typer>=0.12",           # CLI
    "watchdog>=4",           # plugin hot-reload
    "feedparser>=6",         # RSS news plugin
    "faster-whisper>=1.0",   # STT (whisper.cpp Python bindings)
    "websockets>=12",        # WebSocket servers (chat + terminal)
    "ptyprocess>=0.7",       # PTY for browser terminal
    "kokoro-onnx>=0.4",      # Kokoro TTS
    "cryptography>=42",      # Keychain-backed memory encryption at rest
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[project.scripts]
cortana = "cortana.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"
