[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortana"
version = "0.1.0"
description = "Local, privacy-first AI personal assistant for macOS"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.0",           # OpenAI Responses API
    "chromadb>=0.5",         # episodic memory
    "pydantic>=2.0",         # config / data models
    "httpx>=0.27",           # async HTTP (web fetch plugin)
    "beautifulsoup4>=4.12",  # HTML parsing
    "pyperclip>=1.8",        # clipboard plugin
    "pyyaml>=6.0",           # plugin manifests
    "python-dotenv>=1.0",    # ignored local env files
    "rich>=13",              # terminal output
    "typer>=0.12",           # CLI
    "feedparser>=6",         # RSS news plugin
    "websockets>=12",        # authenticated local bridge
    "cryptography>=42",      # Keychain-backed memory encryption at rest
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]
voice = ["numpy>=2.0", "sounddevice>=0.5", "faster-whisper>=1.0", "kokoro-onnx>=0.4", "torch>=2.0"]

[project.scripts]
cortana = "cortana.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"
